--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["James Angstrom"]
 
 [dependencies]
-amethyst = "0.9"
+amethyst = { path = "../amethyst" }
 gilrs = "0.6.1"
 nalgebra = "0.16.8"
 nalgebra-glm = "0.1.0"
@@ -13,4 +13,3 @@ rand = "0.5.5"
 
 [profile.release]
 opt-level = 3
-codegen-units = 1
