--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,15 @@ nalgebra-glm = "0.1.0"
 ncollide3d = "0.17.1"
 rand = "0.5.5"
 
+thread_profiler = { version = "0.3", optional = true }
+
+[features]
+profiler = [
+    "thread_profiler",
+    "thread_profiler/thread_profiler",
+    "amethyst/profiler",
+]
+
 [profile.release]
 opt-level = 3
+debug = true
